--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:text="도서관리" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/my_library_button"
             android:layout_width="100dp"
             android:layout_height="80dp"
             android:layout_marginLeft="25dp"
