--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
             android:layout_height="66dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="검색 키워드를 입력하세요."
+            android:hint="검색 키워드를 입력하세요."
             android:layout_weight="1.08" />
 
         <Button
