--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:text="도서관리" />
 
         <Button
-            android:id="@+id/my_library_button"
+            android:id="@+id/my_library_management_button"
             android:layout_width="100dp"
             android:layout_height="80dp"
             android:layout_marginLeft="25dp"
@@ -55,11 +55,11 @@
             android:text="희망 도서 신청" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/login_button"
             android:layout_width="100dp"
             android:layout_height="80dp"
             android:layout_marginLeft="25dp"
-            android:text="그냥 버튼" />
+            android:text="로그인" />
 
     </LinearLayout>
 
