--- a/app/src/main/res/layout/content_book_detail.xml
+++ b/app/src/main/res/layout/content_book_detail.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.kjw.mylibrary.BookSearchActivity"
-    tools:showIn="@layout/activity_book_search">
+    tools:context="com.example.kjw.mylibrary.BookDetailActivity"
+    tools:showIn="@layout/activity_book_detail">
+
+
 
 </android.support.constraint.ConstraintLayout>
