--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -3,34 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_margin="15dp"
     android:padding="10dp">
 
 
     <TextView
         android:id="@+id/textView_list_author"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_margin="5dp"
         android:padding="5dp" />
 
 
     <TextView
         android:id="@+id/textView_list_title"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
         android:layout_margin="5dp"
         android:padding="5dp" />
 
 
     <TextView
         android:id="@+id/textView_list_publication"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
         android:layout_margin="5dp"
         android:padding="5dp" />
 
