Make rented/reserved book information. TODO. Login, cancel reservation.

--- a/app/src/main/res/layout/activity_book_search.xml
+++ b/app/src/main/res/layout/activity_book_search.xml
@@ -23,7 +23,7 @@
 
 
     <ListView
-        android:id="@+id/book_list"
+        android:id="@+id/search_book_list"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:divider="#ffcc22"
