--- a/app/src/main/res/layout/activity_rented_book.xml
+++ b/app/src/main/res/layout/activity_rented_book.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.kjw.mylibrary.RentedBookActivity">
 
+    <ListView
+        android:id="@+id/rented_book_list"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:divider="#ffcc22"
+        android:dividerHeight="1.5dp"
+        android:choiceMode="singleChoice" />
 </android.support.constraint.ConstraintLayout>
