--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:text="열람실 좌석 조회" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/mainHopeBookBt"
             android:layout_width="100dp"
             android:layout_height="80dp"
             android:layout_marginLeft="25dp"
