--- a/app/src/main/res/layout/book_search_holding_info.xml
+++ b/app/src/main/res/layout/book_search_holding_info.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
 >
     <TextView
-        android:id="@+id/textView_holding_info_assigednumber"
-        android:layout_width="220dp"
+        android:id="@+id/textView_holding_info_assign"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_margin="5dp"
@@ -14,10 +14,17 @@
 
     <TextView
         android:id="@+id/textView_holding_info_location"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_margin="5dp"
         android:padding="5dp" />
+
+    <Button
+        android:id="@+id/book_reservation_button"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:text="도서예약"/>
 
 </LinearLayout>
