--- a/app/src/main/res/layout/activity_hope_book_popup.xml
+++ b/app/src/main/res/layout/activity_hope_book_popup.xml
@@ -7,6 +7,7 @@
     android:layout_gravity="center"
     tools:context="com.example.kjw.mylibrary.hopeBookPopupActivity"
     android:orientation="vertical">
+
         <TextView
             android:id="@+id/popUpTitle"
             android:layout_width="match_parent"
@@ -18,9 +19,11 @@
             android:inputType="textPersonName"
             android:linksClickable="false"
             android:longClickable="true"
-            android:padding="2dp"
+            android:padding="4dp"
             android:text="희망도서 신청"
             android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:textStyle="bold"
             tools:background="#2337DE"
             tools:clickable="false" />
 
@@ -32,7 +35,11 @@
             android:ems="10"
             android:gravity="center"
             android:inputType="textPersonName"
-            android:text="직접 신청 하기" />
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:text="직접 신청 하기"
+            android:textSize="16dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/popupBtSearchRegister"
@@ -42,5 +49,9 @@
             android:ems="10"
             android:gravity="center"
             android:inputType="textPersonName"
-            android:text="도서 검색 후 신청하기" />
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:text="도서 검색 후 신청하기"
+            android:textSize="16dp"
+            android:textStyle="bold" />
 </LinearLayout>
