--- a/app/src/main/res/layout/activity_groupstudyroom.xml
+++ b/app/src/main/res/layout/activity_groupstudyroom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,8 @@
     <LinearLayout
         android:layout_width="346dp"
         android:layout_height="500dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="6dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="6dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -19,10 +19,9 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:text="제 1도서관 3층 1호\n4~5명\n09:00~13:00"
+                android:text="제 1도서관 3층 1호\n3~4명\n09:00~13:00"
                 android:textAlignment="center"
                 android:layout_weight="1" />
 
@@ -41,11 +40,10 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView2"
                 android:layout_width="186dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:text="제 1도서관 3층 2호\n4~5명\n09:00~13:00"
+                android:text="제 1도서관 3층 2호\n3~4명\n09:00~13:00"
                 android:textAlignment="center" />
 
             <Button
@@ -63,11 +61,10 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView3"
                 android:layout_width="186dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:text="제 1도서관 3층 3호\n4~5명\n09:00~13:00"
+                android:text="제 1도서관 3층 3호\n3~4명\n09:00~13:00"
                 android:textAlignment="center" />
 
             <Button
@@ -85,11 +82,10 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView5"
                 android:layout_width="186dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:text="제 1도서관 4층 1호\n5~8명\n09:00~13:00"
+                android:text="제 1도서관 4층 1호\n5~6명\n09:00~13:00"
                 android:textAlignment="center" />
 
             <Button
@@ -107,11 +103,10 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView6"
                 android:layout_width="186dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:text="제 1도서관 4층 2호\n5~8명\n09:00~13:00"
+                android:text="제 1도서관 4층 2호\n5~6명\n09:00~13:00"
                 android:textAlignment="center" />
 
             <Button
@@ -129,11 +124,10 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView7"
                 android:layout_width="186dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:text="제 1도서관 4층 3호\n5~8명\n09:00~13:00"
+                android:text="제 1도서관 4층 3호\n5~6명\n09:00~13:00"
                 android:textAlignment="center" />
 
             <Button
@@ -145,4 +139,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
