--- a/app/src/main/res/layout/hopebook_listitem.xml
+++ b/app/src/main/res/layout/hopebook_listitem.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="2dp">
 
     <TextView
-        android:id="@+id/hopelistItem_num"
+        android:id="@+id/hopelistItem_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:text="순번" />
+        android:text="순번"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/hopelistItem_date"
@@ -20,18 +22,19 @@
         android:layout_marginRight="5dp"
         android:layout_toEndOf="@+id/textView5"
         android:layout_toRightOf="@+id/textView5"
-        android:layout_weight="0.1"
+        android:layout_weight="0.2"
         android:gravity="center"
+        android:layout_gravity="center"
         android:text="신청일자" />
 
     <TextView
         android:id="@+id/hopelistItem_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/textView2"
         android:layout_toStartOf="@+id/textView2"
-        android:layout_weight="0.9"
+        android:layout_weight="1"
         android:gravity="center"
         android:text="제목/저자" />
 
@@ -42,8 +45,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_gravity="right"
+        android:layout_gravity="center"
         android:layout_marginLeft="5dp"
         android:layout_weight="0"
-        android:text="처리상태" />
+        android:text="처리상태"
+        />
 </LinearLayout>
