Fix main activity error by image view.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -168,6 +168,7 @@
                 android:text="로그인" />
 
             <TextView
+                android:id="@+id/login_confirm_button_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
