--- a/app/src/main/res/layout/dialog_book_info.xml
+++ b/app/src/main/res/layout/dialog_book_info.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical" android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:padding="5dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
