--- a/app/src/main/res/layout/activity_studyroom.xml
+++ b/app/src/main/res/layout/activity_studyroom.xml
@@ -19,6 +19,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/sr1_name"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:text="[제 2도서관] 2층 1 열람실"
@@ -40,6 +41,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/sr2_name"
                 android:layout_width="186dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
@@ -61,6 +63,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/sr3_name"
                 android:layout_width="186dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
@@ -82,6 +85,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/sr4_name"
                 android:layout_width="186dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
